# Clest

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  TODO.txt
findcmake/: FindOpenCL.cmake
src/: main.cpp
src/cpp/: cgal.hpp  colorizer.cpp  colorizer.hpp  fractal.cpp  grider.cpp  main.cpp  mesher.cpp  mesher.hpp  operator.cpp  util.hpp  wlopSimplifyVerbose.hpp
src/cpp/cl/: cl_runner.cpp  cl_runner.hpp  clest_program.hpp  grid_program.hpp  marching_program.hpp
src/cpp/las/: FileHandler.cpp  FileHandler.hpp  GridFile.cpp  GridFile.hpp  LASFile.cpp  LASFile.hpp  LASfile.hpp  LASheader.hpp  Operations.cpp  Operations.hpp  PointData.hpp  PublicHeader.hpp  RecordHeader.hpp  WlopSimplifyVerbose.hpp  cube_marcher.cpp  cube_marcher.hpp  grid_file.cpp  grid_file.hpp  las_file.cpp  las_file.hpp  las_operations.cpp  point_data.hpp  public_header.hpp  record_header.hpp  wlop_simplify_verbose.hpp
src/cpp/lewiner/: MarchingCubes.cpp  MarchingCubes.h
src/cpp/lib/clest/: cl.hpp  clUtil.hpp  ostream.hpp  util.hpp
src/cpp/mesh/: cube_marcher.hpp
src/opencl/: fractal.cl  grider.cl  lop.cl  marching.cl  vertex.cl
